# fee-collector-solana

./: .gitignore  Anchor.toml  Cargo.toml  README.md  setup-env.sh  validator.sh
audits/internal/: README.md
fork_accounts/: BKcJAkiGjFiSwRU5RDTLHi1MnRpq2pCju54pmf9J4px4.json  GbY67sCAMj2CZAUzFiepZgf3Npqa7VtkCi7bbKRx8Pap.json
programs/fee_collector/: Cargo.toml
programs/fee_collector/src/: context.rs  errors.rs  events.rs  lib.rs  message.rs  state.rs
programs/fee_collector/src/state/: config.rs  lockbox_governor.rs  mod.rs
programs/lockbox_governor/src/: context.rs  errors.rs  lib.rs
tests/: fee_collector_change_upgrade_authority.ts  fee_collector_init.ts  lockbox_governor_init.ts  lockbox_governor_message.ts  lockbox_governor_set_upgrade_authority.ts  lockbox_governor_transfer.ts  lockbox_governor_upgrade_program.ts
