[package]
name = "fee_collector"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fee_collector"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
spl-token = { version = "3.3", features = ["no-entrypoint"] }
whirlpool = { git = "https://github.com/orca-so/whirlpools", package = "whirlpool", features = ["cpi"] }
liquidity_lockbox = { git = "https://github.com/valory-xyz/lockbox-solana", package = "liquidity_lockbox", branch = "package", features = ["cpi"] }

# MSRV related
solana-program = "=1.14.29"
regex = "=1.7.1"
proc-macro-crate = "=1.2.1"
jobserver = "=0.1.25"
