[package]
name = "fee_collector"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fee_collector"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
solana-program = "=1.14.29"
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
spl-token = { version = "3.3", features = ["no-entrypoint"] }
