[package]
name = "fee_collector"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fee_collector"

[features]
default = ["testnet"]
mainnet = ["wormhole-anchor-sdk/mainnet"]
testnet = ["wormhole-anchor-sdk/solana-devnet"]
devnet = ["wormhole-anchor-sdk/tilt-devnet"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[profile.release]
overflow-checks = true

[dependencies]
solana-program = "=1.17.7"
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
wormhole-anchor-sdk = { version = "0.29.0-alpha.1", default-features = false }
spl-token = { version = "3.3", features = ["no-entrypoint"] }
#anchor-lang = { version = "0.26.0", features = ["init-if-needed"]}